<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TheWeekendAgriculturist</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- Sliding pane -->
    <string-array name="array_module_name">
        <item>Intro</item>
        <item>Events</item>
        <item>Gallery</item>
        <item>Experiences</item>
        <item>Contact Us</item>
        <item>My Account</item>
        <item>Suggestions/Queries</item>
    </string-array>

    <string name="description_image_default">description_image_default</string>
    <string name="send">SEND</string>

    <!-- Intro -->
    <string name="title_intro">Intro</string>
    <string name="intro_text">Platform to help Indian Agriculture by volunteering for free labour and other contribution. Yes you wil do the field work.
        Platform to help Indian Agriculture by volunteering for free labour and other contribution. Yes you wil do the field work.
        Platform to help Indian Agriculture by volunteering for free labour and other contribution. Yes you wil do the field work.</string>
    <string name="title_events">Events</string>
    <string name="event_tab_all">All Events</string>
    <string name="event_tab_upcoming">Upcoming</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_experiences">Experiences</string>
    <string name="title_contactus">Contact Us</string>
    <string name="title_myaccount">My Account</string>
    <string name="title_suggestions">Suggestions/Queries</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    
    <!-- Event Details -->
     <string name="register">Register</string>
     <string name="event_description">Description</string>
     <string name="event_details">Details</string>
     <string name="event_date">Date</string>
     <string name="event_time">Time</string>
     <string name="event_place">Place</string>

</resources>
