<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EventDetailsActivity" >

    <TextView
        android:id="@+id/eventDetails_eventName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/value_20" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eventDetails_eventName_textView" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/eventDetails_eventDescription_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/event_description"/>

            <TextView
                android:id="@+id/eventDetails_eventDescription_value_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/eventDetails_eventDetailInfo_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                 android:text="@string/event_details"/>

            <TextView
                android:id="@+id/eventDetails_eventDetailInfo_value_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/eventDetails_eventDate_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                 android:text="@string/event_date"/>

            <TextView
                android:id="@+id/eventDetails_eventDate_value_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/eventDetails_eventTime_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/event_time" />

            <TextView
                android:id="@+id/eventDetails_eventTime_value_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/eventDetails_eventPlace_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                 android:text="@string/event_place"/>

            <TextView
                android:id="@+id/eventDetails_eventPlace_value_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/register" />
    </RelativeLayout>

</RelativeLayout>