<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_bar_height"
        android:background="@color/blackColor" >

        <ImageButton
            android:id="@+id/menu_btn"
           	android:layout_width="@dimen/menu_button_width"
            android:layout_height="@dimen/menu_button_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/value_5"
            android:background="@android:color/transparent"
            android:contentDescription="@string/description_image_default"
            android:scaleType="fitXY"
            android:src="@drawable/menu_btn" 
            android:paddingRight="40dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
           	/>
        <TextView
            android:id="@+id/activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:text="@string/title_intro"
            android:textSize="@dimen/intro_title_text_size" />

        </RelativeLayout>
      
    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="@dimen/intro_image_height"
            android:src="@drawable/intro_twa" 
            android:scaleType="fitXY"
            android:contentDescription="@string/description_image_default"/>
    
    <ScrollView android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:padding="@dimen/scrollview_padding"
        android:layout_weight="1">
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:text="@string/intro_text"/>
        
    </ScrollView>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="@dimen/footer_height"
        android:background="@color/green"
        android:orientation="horizontal">

         <ImageButton
             android:id="@+id/intro_btn_email"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_weight="1"
             android:contentDescription="@string/description_image_default"
             android:padding="@dimen/intro_imagebutton_padding"
             android:src="@drawable/mail"
             android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/intro_btn_blog"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:contentDescription="@string/description_image_default"
                android:padding="@dimen/intro_imagebutton_padding"
                android:src="@drawable/blog"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/intro_btn_facebook"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:contentDescription="@string/description_image_default"
                android:padding="@dimen/intro_imagebutton_padding"
                android:src="@drawable/fb"
                android:scaleType="centerInside" />
        
        
    </LinearLayout>
</LinearLayout>